# 2048

./: .gitignore  CMakeLists.txt  README.md  rungame.cpp
include/: 2048.h  BaseUI.h  PrintfUI.h  commonTypes.h
src/: 2048.cpp  BaseUI.cpp  PrintfUI.cpp
test/: CMakeLists.txt  test.cpp
